add font-style to address

--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,7 @@ sans-serif;
     font-size: 14px;
     line-height: 1.71x;
     letter-spacing: 0.03em;
+    font-style: normal;
 }
 
 .addres:hover,
